fix(tufte): font size & table overflow

--- a/src/styles/tufte/tufte.scss
+++ b/src/styles/tufte/tufte.scss
@@ -3,7 +3,7 @@
 /* Tufte CSS styles */
 
 body.tufte {
-	font-size: 15px;
+	font-size: 14px;
 	width: 87.5%;
 	margin-left: auto;
 	margin-right: auto;
@@ -15,6 +15,13 @@ body.tufte {
 	color: #111;
 	max-width: 1400px;
 	counter-reset: sidenote-counter;
+}
+@media (max-width: 760px) {
+	body.tufte {
+		width: 84%;
+		padding-left: 0;
+		padding-right: 0;
+	}
 }
 
 /* Adds dark mode */
@@ -93,8 +100,8 @@ body.tufte {
 	dl,
 	ol,
 	ul {
-		font-size: 1.3rem;
-		line-height: 1.9rem;
+		font-size: 1.2rem;
+		line-height: 1.75rem;
 	}
 
 	p {
@@ -259,7 +266,7 @@ body.tufte {
 		width: 50%;
 		margin-top: 0.3rem;
 		margin-bottom: 0;
-		font-size: 1rem;
+		font-size: 0.9rem;
 		line-height: 1.3;
 		vertical-align: baseline;
 		position: relative;
@@ -284,7 +291,7 @@ body.tufte {
 
 	.sidenote:before {
 		content: counter(sidenote-counter) " ";
-		font-size: 1rem;
+		font-size: 0.9rem;
 		top: -0.5rem;
 	}
 
@@ -295,14 +302,9 @@ body.tufte {
 		text-align: left;
 	}
 
-	div.fullwidth,
-	table.fullwidth {
+	.fullwidth {
 		width: 100%;
-	}
-
-	div.table-wrapper {
 		overflow-x: auto;
-		font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif;
 	}
 
 	.sans {
@@ -401,12 +403,6 @@ body.tufte {
 	}
 
 	@media (max-width: 760px) {
-		body {
-			width: 84%;
-			padding-left: 8%;
-			padding-right: 8%;
-		}
-
 		hr,
 		section > p,
 		section > footer,
@@ -493,7 +489,7 @@ body.tufte {
 
 	.sidenote p,
 	.marginnote p {
-		font-size: 1rem;
+		font-size: 0.9rem;
 		line-height: 1.3;
 		margin: 0;
 	}
@@ -591,7 +587,7 @@ body.tufte {
 	}
 	.sidenote:before {
 		content: "*";
-		font-size: 1rem;
+		font-size: 0.9rem;
 		top: -0.3rem;
 	}
 
@@ -625,6 +621,7 @@ body.tufte {
 	table {
 		border-top: 2px solid black;
 		border-bottom: 2px solid black;
+		overflow-x: auto;
 	}
 	th {
 		border-bottom: 1px solid black;
@@ -637,7 +634,7 @@ body.tufte {
 	}
 	td,
 	th {
-		font-size: 1.4rem;
+		font-size: 1.2rem;
 		padding: 10px;
 		text-align: left;
 	}
